# 5sem_ipp

pr1/: main.py
pr2/: PR2.postman_collection.json
pr3/: 3 практика.html
pr4/: PR4.postman_collection.json  database.json  package-lock.json
pr5/5_back/: Dockerfile  db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
pr5/5_back/contact_list/: asgi.py  settings.py  urls.py  wsgi.py
pr5/5_back/contacts/: models.py  serializer.py  urls.py  views.py
pr5/5_back/contacts/migrations/: 0001_initial.py
pr5/contact_list_vue/src/: App.vue
pr5/contact_list_vue/src/components/: MyButton.vue  Task.vue  TaskCreateForm.vue  TaskUpdateForm.vue
pr5/contact_list_vue/src/router/: index.js
pr5/contact_list_vue/src/store/: index.js
pr5/contact_list_vue/src/views/: HomeView.vue  TaskDetailView.vue
pr7/: README.md  index.js  package-lock.json  package.json
pr7/schema/: schema.js
pr8/grpcPython/: pyproject.toml
pr8/grpcPython/grpc-python-crud/: client.py
pr8/to-do_vue_GRPC/src/components/: MyButton.vue  Task.vue  TaskCreateForm.vue  TaskUpdateForm.vue
pr8/to-do_vue_GRPC/src/router/: index.js
pr8/to-do_vue_GRPC/src/views/: HomeView.vue  TaskDetailView.vue
