[tool.poetry]
name = "grpcpython"
version = "0.1.0"
description = ""
authors = ["rom.sinitsyn <rom.sinitsyn@x5.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
grpcio = "^1.57.0"
grpcio-tools = "^1.57.0"
piccolo = {extras = ["sqlite"], version = "^0.119.0"}
uvicorn = "^0.23.2"
fastapi = "^0.103.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

